--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top logo"><b>Vishwak</b></a>
+                    <a href="#" class="navbar-brand scroll-top logo"><b>VISHWAK SENA REDDY.J</b></a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
@@ -65,7 +65,7 @@
     <div id="#top"></div>
     <section id="home">
         <div class="banner-container">
-            <img src="images/banner-bg.jpg" alt="banner" />
+            <img src="images/portfolio/img2.jpg" alt="banner" />
             <div class="container banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
@@ -159,14 +159,14 @@
                 <div class="col-sm-6">
                     <h2>Programming <strong>Skills</strong></h2>
                     <p class="mrgBtm20">
-                        It takes knowledge, smart work, and dedication to make great ideas come to life. I have been helping make great ideas happen for the past 7 years and am always ready for new challenges.
+                        It takes knowledge, smart work, and dedication to make great ideas come to life.
                 
                     </p>
                     <div class="row">
                         <div class="col-md-2 skilltitle">HTML5</div>
                         <div class="col-md-8">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                                     <span class="sr-only">50% Complete</span>
                                 </div>
                             </div>
@@ -186,7 +186,7 @@
                         <div class="col-md-2 skilltitle">C++</div>
                         <div class="col-md-8">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                                     <span class="sr-only">60% Complete</span>
                                 </div>
                             </div>
@@ -196,7 +196,7 @@
                         <div class="col-md-2 skilltitle">JAVA</div>
                         <div class="col-md-8">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                                     <span class="sr-only">50% Complete</span>
                                 </div>
                             </div>
@@ -206,7 +206,7 @@
                 <div class="col-sm-6">
                     <h2>Designing <strong>Skills</strong></h2>
                     <p class="mrgBtm20">
-                        Problem solving is not always about sitting in a board room talking about the way things should be done. I have a strong background in UI design which allows me to think on my feet and act upon it.
+                        Problem solving is not always about sitting in a board room talking about the way things should be done.
                 
                     </p>
                     <div class="row">
@@ -223,7 +223,7 @@
                         <div class="col-md-2 skilltitle">Illustrator</div>
                         <div class="col-md-8">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">
                                     <span class="sr-only">20% Complete</span>
                                 </div>
                             </div>
@@ -233,7 +233,7 @@
                         <div class="col-md-2 skilltitle">Indesign</div>
                         <div class="col-md-8">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
                                     <span class="sr-only">10% Complete</span>
                                 </div>
                             </div>
@@ -399,16 +399,13 @@
             <div class="heading text-center">
                 <!-- Heading -->
                 <h2>Portfolio</h2>
-                <p>I DON'T HAVE A PORTFOLIO</p>
+                <p></p>
             </div>
 
             <div class="row">
                 <nav id="filter" class="col-md-12 text-center">
                     <ul>
-                        <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
-                        <li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Web Design</a></li>
                         <li><a href="#" class="btn-theme btn-small" data-filter=".photography">Photography</a></li>
-                        <li><a href="#" class="btn-theme btn-small" data-filter=".print">Print</a></li>
                     </ul>
                 </nav>
                 <div class="col-md-12">
@@ -506,41 +503,6 @@
                                     </div>
                                 </div>
                             </article>
-
-                            <article class="col-sm-4 isotopeItem photography">
-                                <div class="portfolio-item">
-                                    <img src="images/portfolio/img8.jpg" alt="" />
-                                    <div class="portfolio-desc align-center">
-                                        <div class="folio-info">
-                                            <a href="images/portfolio/img8.jpg" class="fancybox">
-                                                <h5>Project Name</h5>
-                                                <i class="fa fa-arrows-alt fa-2x"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </article>
-
-                            <article class="col-sm-4 isotopeItem print">
-                                <div class="portfolio-item">
-                                    <img src="images/portfolio/img9.jpg" alt="" />
-                                    <div class="portfolio-desc align-center">
-                                        <div class="folio-info">
-                                            <a href="images/portfolio/img9.jpg" class="fancybox">
-                                                <h5>Project Name</h5>
-                                                <i class="fa fa-arrows-alt fa-2x"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </article>
-                        </div>
-
-                    </div>
-
-
-                </div>
-            </div>
-
-        </div>
     </section>
 
 	<!--Contact -->
