--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="col-md-4 text-center tileBox">
                     <div class="txtHead"><i class="fa fa-css3"></i>
                     <h3>MY <span class="id-color">OUALIFICATIONS</span></h3></div>
-                    <p>I HAVE PASSED MY 10TH GRADE(CBSE) WITH AN AGGREGATE OF 6.4 IN PALLAVI MODEL SCHOOL AND MY INTERMEDIATE WITH AN AGGREGATE OF 73% IN ICLASS JUNIOR COLLEGE.</p>
+                    <p>I HAVE PASSED MY 10TH GRADE(CBSE) WITH AN AGGREGATE OF 6.4 GPA IN PALLAVI MODEL SCHOOL AND MY INTERMEDIATE WITH AN AGGREGATE OF 73% IN ICLASS JUNIOR COLLEGE.</p>
                 </div>
                 <!-- end: -->
 
@@ -159,7 +159,7 @@
                 <div class="col-sm-6">
                     <h2>Programming <strong>Skills</strong></h2>
                     <p class="mrgBtm20">
-                        It takes knowledge, smart work, and dedication to make great ideas come to life.
+                        It takes knowledge, smart work, and dedication to make great ideas come to lif
                 
                     </p>
                     <div class="row">
