--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div id="#top"></div>
     <section id="home">
         <div class="banner-container">
-            <img src="images/portfolio/img2.jpg" alt="banner" />
+            <img src="images/portfolio/img4.jpg" alt="banner" />
             <div class="container banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
@@ -405,6 +405,7 @@
             <div class="row">
                 <nav id="filter" class="col-md-12 text-center">
                     <ul>
+                        <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
                         <li><a href="#" class="btn-theme btn-small" data-filter=".photography">Photography</a></li>
                     </ul>
                 </nav>
@@ -412,7 +413,7 @@
                     <div class="row">
                         <div class="portfolio-items isotopeWrapper clearfix" id="3">
 
-                            <article class="col-sm-4 isotopeItem webdesign">
+                            <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
                                     <img src="images/portfolio/img1.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
@@ -452,7 +453,7 @@
                                 </div>
                             </article>
 
-                            <article class="col-sm-4 isotopeItem print">
+                            <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
                                     <img src="images/portfolio/img4.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
@@ -478,7 +479,7 @@
                                 </div>
                             </article>
 
-                            <article class="col-sm-4 isotopeItem webdesign">
+                            <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
                                     <img src="images/portfolio/img6.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
@@ -491,7 +492,7 @@
                                 </div>
                             </article>
 
-                            <article class="col-sm-4 isotopeItem print">
+                            <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
                                     <img src="images/portfolio/img7.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
