--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <!-- item -->
                 <div class="col-md-4 text-center tileBox">
                     <div class="txtHead"><i class="fa fa-css3"></i>
-                    <h3>MY <span class="id-color">OUALIFICATIONS</span></h3></div>
+                    <h3>MY <span class="id-color">QUALIFICATIONS</span></h3></div>
                     <p>I HAVE PASSED MY 10TH GRADE(CBSE) WITH AN AGGREGATE OF 6.4 GPA IN PALLAVI MODEL SCHOOL AND MY INTERMEDIATE WITH AN AGGREGATE OF 73% IN ICLASS JUNIOR COLLEGE.</p>
                 </div>
                 <!-- end: -->
