--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section id="quote" class="bg-parlex">
         <div class="parlex-back">
             <div class="container secPad text-center">
-				<h2>SATYAMEVA JAYATE</h2><h3></h3>
+				<h2>I'M GONNA MAKE HIM AN OFFER HE CAN'T REFUSE.</h2><h3>- THE GODFATHER</h3>
             </div>
             <!--/.container-->
         </div>
